argocd/infra/minio/overlays/dev/httproute-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-api
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - minio-api.127.0.0.1.nip.io
  rules:
    - backendRefs:
        - name: minio
          port: 9000
      matches:
        - path:
            type: PathPrefix
            value: /
